[tool.poetry]
name = "torch-template"
version = "0.1.0"
description = "change me"
authors = ["Sugam Sharma <sugams342@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
albumentations = "^1.4.14"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
torchtest = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
